@@ -401,6 +401,33 @@ The Cantata source folder contains the following structure:
     widgets    - Widgets that are probably Cantata specific.
 
 
+Debug Logging
+=============
+
+Cantata contains some debug logging, that might help to diagnose certain
+issues. To enable this, you must set an environment variable before starting
+Cantata. Therefore, its porobably better to start Cantata from the commandline.
+
+The following debug values may be used:
+
+    MPD communications       1
+    Covers                   2 
+    Wikipedia context info   4
+    Last.fm context info     8
+    Combined context info   16
+    Context widget          32
+    Context backdrop        64
+
+These values may be combined to enble multipe output. e.g. to enable MPD and
+covers logging:
+
+    CANTATA_DEBUG=3 cantata
+    
+for just covers logging:
+
+    CANTATA_DEBUG=1 cantata
+    
+
 Credits
 =======
 
